# hds_demo_suite

./: .gitignore  README.md
Application A/: Application A.sln
Application A/Application A/: App.xaml  App.xaml.cs  Application A.csproj  MainWindow.xaml  MainWindow.xaml.cs
HDS Demo/: HDS Demo.sln
HDS Demo/HDS Demo/: App.xaml  App.xaml.cs  AppInfo.cs  HDS Demo.csproj  HdsViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs
HDS Demo/HDS Demo/Controllers/: AppRegistrationController.cs  FaultController.cs
HDS Demo/HDS Demo/Models/: CaptureRequest.cs  FaultDetails.cs  FaultEntry.cs  FaultSignature.cs  FaultTimeSeries.cs  FaultTypeDescriptions.cs  IncomingFaultDto.cs  RegisteredApplication.cs
HDS Demo/HDS Demo/Services/: ApplicationRegistry.cs  FaultRegistry.cs  HdsServer.cs  TimeSeriesBuilder.cs
HDS Demo/HDS Demo/Utils/: MemoryInfo.cs
application_b/: Cargo.toml
application_b/src/: hds_client.rs  main.rs  models.rs
aspnetcore-server-generated/: IO.Swagger.sln  README.md
aspnetcore-server-generated/src/IO.Swagger/: IO.Swagger.csproj  Startup.cs
aspnetcore-server-generated/src/IO.Swagger/Controllers/: BulkDataApi.cs  CapabilitiesApi.cs  ConfigurationsApi.cs  DataRetrievalApi.cs  DiscoveryApi.cs  FaultHandlingApi.cs  LockingApi.cs  LoggingApi.cs  OperationsControlApi.cs  TargetModesApi.cs  UpdatesApi.cs
aspnetcore-server-generated/src/IO.Swagger/Properties/: launchSettings.json
aspnetcore-server-generated/src/IO.Swagger/wwwroot/: swagger-original.json
